<resources>
    <string name="app_name">CatalogueMovie</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Change Language Setting</string>
    <string name="date_release">Date Release</string>
    <string name="movie_title">Movie Title</string>
    <string name="sinopsys">Synopsis</string>
    <string name="release_date">Release Date</string>
    <string name="search">Search Movie</string>
    <string name="detail_movie">Detail Movie</string>
    <string name="now_playing">Now Playing</string>
    <string name="upcoming">Upcoming</string>
    <string name="catalogue_movie">Catalogue Movie</string>
    <string name="favorite">Favorite</string>
    <string name="logo">logo</string>
    <string name="favorite_movie">Favorite Movies</string>
    <string name="addto">Added to Favorites</string>
</resources>
