<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        app:cardElevation="4dp"
        app:cardPreventCornerOverlap="false">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:padding="8dp">

            <ImageView
                android:id="@+id/movie_poster"
                android:layout_width="120dp"
                android:layout_height="160dp"
                android:layout_marginBottom="4dp"
                android:scaleType="centerCrop"
                android:src="@drawable/def"/>

            <TextView
                android:id="@+id/movie_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_toEndOf="@+id/movie_poster"
                android:text="@string/movie_title"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:ignore="RtlHardcoded" />

            <TextView
                android:id="@+id/movie_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/movie_name"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_toEndOf="@+id/movie_poster"
                android:maxLength="150"
                android:text="@string/sinopsys"
                tools:ignore="RtlHardcoded" />

            <TextView
                android:id="@+id/movie_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_alignEnd="@+id/movie_desc"
                android:layout_alignParentBottom="true"
                android:layout_below="@id/movie_desc"
                android:layout_toEndOf="@+id/movie_poster"
                android:text="@string/release_date" />
        </RelativeLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>